--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ascent Matrix 2026</title>
+    <link rel="icon" href="https://res.cloudinary.com/dzss2fubc/image/upload/v1768986198/Ascent_Matrix_LOGO_FINAL_-_ICON_2_rglzra.png" type="image/png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/html5-qrcode"></script>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
